# cpp-template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  main_includes.h
